fix: input radio color and nav alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* border: 1px solid red; */
 }
 img{
     display: block;
@@ -20,6 +19,7 @@ p, h3, blockquote, cite{
 html{
     font-family: sans-serif;
     scroll-behavior: smooth;
+    accent-color: #0661FF;
 }
 /* header elements */
 header nav{
@@ -36,19 +36,18 @@ nav ul{
     display: flex;
     gap: 2em;
     list-style-type: none;
-    padding:0 15px 0 15px;
+    padding-inline: 15px;
 }
-
-
 nav ul li{
-    padding:20px 0 15px 0;
+    padding-block: 20px;
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
 }
 
-nav ul li:hover{
+nav ul li:hover:not(nav ul li.not-border){
     border-bottom: 2px solid black;
 }
-
-
 
 nav ul li a{
     text-decoration: none;
@@ -87,7 +86,7 @@ nav ul li a.blue{
 /* cta elements */
 #cta{
     background-color: #B4D0E7;
-    position: relative;
+    
 }
 
 #cta .cta-container{
@@ -156,7 +155,6 @@ h2{
     align-items: center;
     gap: 2em;
 }
-
 /* plans */
 #section1{
     display: flex;
@@ -372,6 +370,19 @@ a{
     width: 25%;
 }
 
+#section3 #partners figure img:not(#partners .business-square-center-col .square-center figure img){ 
+    width: 50%;
+    filter: invert(); 
+}
+
+#section3 #partners figure:not(#partners .business-square-center-col .square-center figure){
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #section3 #partners .business-square-col .square{
     height: 50%;
 }
@@ -400,26 +411,11 @@ a{
 
 
 /* left logos */
-
 /* left group top-left */
 #section3 #partners .business-square-col .left-tl{
     background-color: #A2D39B;
     border: 15px solid #D1E9CD;
 }
-
-#section3 #partners figure img:not(#partners .business-square-center-col .square-center figure img){ 
-    width: 50%;
-    filter: invert(); 
-}
-#section3 #partners figure:not(#partners .business-square-center-col .square-center figure){
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
 
 
 /* left group bottom-left */
@@ -574,12 +570,12 @@ cite{
 
 
 /* footer elements */
+
 #footer, #footer a{
     background-color: black;
     text-decoration: none;
     color: #EEFBFF;
 }
-
 #footer .f-container{
     width: 60%;
     margin: 0 auto;
